# flumph

./: .gitignore  README.md  pyproject.toml
duodrone/: README.md  pyproject.toml
duodrone/src/duodrone/: __init__.py  config.py  data.py  flask_server.py  http_server.py  query.py
duodrone/tests/: dummy_server.py
monodrone/: README.md  pyproject.toml
monodrone/src/monodrone/: __main__.py  flask_server.py  kivy_window.py  main_window.py  outer_event_handler.py
monodrone/src/monodrone/core/: config.py
monodrone/src/monodrone/ui/: chat_window.py  dialog_bubble.py  main_window.py  test.py
src/flumph/: __main__.py  flask_server.py  kivy_window.py  main_window.py
