[project]
name = "flumph"
version = "0.0.1"
description = ""
authors = [
    { name = "boholder", email = "bottleholder@anche.no" },
]
dependencies = [
    # the GUI framework
    # the wsgi application that handles http requests
    # https://flask.palletsprojects.com/en/2.3.x/
    "flask>=2.3.2",
    # the wsgi server that enables flask
    # https://flask.palletsprojects.com/en/latest/deploying/
    "eventlet>=0.33.3",
    # eventlet requires it (on Windows?)
    "cryptography>=41.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.build]
excludes = ["./**/.git"]
source-includes = [
    "tests",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
    "CONTRIBUTING.md"
]

# The key config for building executable wheel
# https://github.com/pypa/pipx#where-does-pipx-install-apps-from
# https://python-packaging.readthedocs.io/en/latest/command-line-scripts.html#the-console-scripts-entry-point
# https://pdm.fming.dev/latest/pyproject/pep621/#console-scripts
[project.scripts]
flumph = "flumph.__main__:main"