[project]
name = "modron"
version = "0.0.1"
authors = [
    { name = "boholder", email = "bottleholder@anche.no" },
]
dependencies = []
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "MIT" }
description = ""

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/duodrone#egg=duodrone",
    "-e file:///${PROJECT_ROOT}/monodrone#egg=monodrone",
]
