[project]
name = "duodrone"
version = "0.0.1"
description = "A package for duplex communication with LLM-oriented chatting services"
authors = [
    { name = "boholder", email = "bottleholder@anche.no" },
]
dependencies = [
    # the wsgi application that handles http requests
    "quart>=0.18.4",
    # the wsgi server that serves wsgi application
    "hypercorn>=0.14.4",
    "openai>=0.27.8",
    "loguru>=0.7.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.build]
excludes = ["./**/.git"]
source-includes = [
    "tests",
    "README.md",
]